@@ -63,10 +63,10 @@ Naemon Config
 
 ## Check Specific Arguments
 
-| Argument | Description                                                                        |
-| -------- | ---------------------------------------------------------------------------------- |
-| exclude  | List of services to exclude from the check (mainly used when service is set to \*) |
-| service  | Name of the service to check (set to \* to check all services). Default: \*        |
+| Argument | Description                                                                                           |
+| -------- | ----------------------------------------------------------------------------------------------------- |
+| exclude  | List of services to exclude from the check (mainly used when service is set to \*) (case insensitive) |
+| service  | Name of the service to check (set to \* to check all services). (case insensitive) Default: \*        |
 
 ## Attributes
 
